...
    }

    private func showResults() {
        statisticService?.store(correct: correctAnswers, total: questionNumber)

        let alertModel = AlertModel(
            id: "resultAlert",
            title: "Этот раунд окончен",
            message: createResultMessage(),
            buttonText: "Сыграть ещё раз",
            action: { [weak self]  in
                guard let self = self else {return}
                self.questionNumber = 1
...
